# mType

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Interpreter.sln  LICENSE  New Text Document.txt  README.md  RELEASE.md  benchmark.ps1  generate_expected_outputs.bat  imgui.ini  mtype_project_structure.txt  premake5.lua  rebuild-extension.bat  runPremake.bat  run_test.bat  script_annotation_query_pass.mt  stack_trace_test.mt  test_optimizer.bat
.claude/: settings.local.json
collections/: List.mt  Map.mt  Queue.mt  Set.mt  Stack.mt
docs/: bench-baseline.md  benchmarks.md  jit-async-plan.md  limitations.md  phase-f-design.md  spike-myt126-tagged-value.md
examples/plugin-hello/: CMakeLists.txt  README.md  hello.cpp  hello.mt
languageserver/: .gitignore  README.md  build-instructions.md  main.cpp  premake5.lua
mType/: mType.vcxproj.filters  mtype-ast.vcxproj.filters  mtype-common.vcxproj.filters  mtype-core.vcxproj.filters  mtype-extensions.vcxproj.filters  mtype-frontend.vcxproj.filters  mtype-jit.vcxproj.filters  mtype-sdl-imgui-plugin.vcxproj.filters  mtype-tests.vcxproj.filters  mtype-vm.vcxproj.filters
mtype-vscode-extension/: .vscodeignore  COLLECTION_INTELLISENSE_FIX.md  LICENSE.md  README.md  completion_reference.md  mtype-language-support-1.0.0.vsix  package-lock.json  package.json
packagemanager/: README.md  mType-PackageManager.sln  mtpm.sln  mtpm.vcxproj.filters  mtype-package-manager.vcxproj.filters  premake5.lua
test_reports/: Generics_Test_Suite_20251107_132436.html  (+1 more)
website/: .gitignore  package.json  (+3 more)
(+6675 files in other folders)
